--- a/angular/anuncios/src/app/anuncios/anuncios.component.html
+++ b/angular/anuncios/src/app/anuncios/anuncios.component.html
@@ -34,6 +34,6 @@
         </tr>
       </tbody>
     </table>
-    <paginator-nav></paginator-nav>
+    <paginator-nav *ngIf="paginador" [paginador]="paginador"></paginator-nav>
   </div>
 </div>
