--- a/angular/anuncios/src/app/paginator/paginator.component.html
+++ b/angular/anuncios/src/app/paginator/paginator.component.html
@@ -1,1 +1,18 @@
-<p>paginator works!</p>
+<ul *ngIf="paginas?.length > 0" class="pagination"> <!-- style="overflow: scroll;" -->
+  <li *ngIf="paginador.number > 0">
+    <a class="page-link" [routerLink]="['/anuncios/page', paginador.number-1]">&laquo;</a>
+  </li>
+  <li [ngClass]="paginador.first?'disabled page-item': 'page-item'">
+    <a class="page-link" [routerLink]="['/anuncios/page', 0]">Primera</a>
+  </li>
+  <li class="page-item" *ngFor="let pagina of paginas" [ngClass]="pagina-1 == paginador.number?'active':''">
+    <span class="page-link" *ngIf="pagina-1 == paginador.number">{{ pagina }}</span>
+    <a class="page-link" *ngIf="pagina-1 != paginador.number" [routerLink]="['/anuncios/page', pagina-1]">{{ pagina }}</a>
+  </li>
+  <li [ngClass]="paginador.last?'disabled page-item': 'page-item'">
+    <a class="page-link" [routerLink]="['/anuncios/page', paginador.totalPages-1]">Última</a>
+  </li>
+  <li *ngIf="paginador.number < paginador.totalPages-1">
+    <a class="page-link" [routerLink]="['/anuncios/page', paginador.number+1]">&raquo;</a>
+  </li>
+</ul>
