--- a/angular/anuncios/src/app/anuncios/form.component.html
+++ b/angular/anuncios/src/app/anuncios/form.component.html
@@ -34,6 +34,13 @@
       </div>
 
       <div class="form-group row">
+        <label for="createAt" class="col-form-label col-sm-2">Fecha</label>
+        <div class="col-sm-6">
+          <input type="date" class="form-control" name="createAt" [(ngModel)]="anuncio.createAt">
+        </div>
+      </div>
+
+      <div class="form-group row">
         <div class="col-sm-6">
           <button class="btn btn-primary" role="button" (click)="create()" *ngIf="!anuncio.id else elseBlock" [disabled]="!anuncioForm.form.valid">Crear</button>
           <ng-template #elseBlock>
