--- a/angular/anuncios/src/styles.css
+++ b/angular/anuncios/src/styles.css
@@ -9,3 +9,6 @@ body {
 .wrap {
   padding-bottom: 60px;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
