--- a/angular/anuncios/src/app/anuncios/detalle/detalle.component.html
+++ b/angular/anuncios/src/app/anuncios/detalle/detalle.component.html
@@ -12,23 +12,28 @@
             <li class="list-group-item">{{anuncio.createAt | date:"fullDate"}}</li>
           </ul>
 
-          <div class="input-group">
+          <div class="input-group mb-3">
             <div class="custom-file">
               <input (change)="seleccionarFoto($event)" type="file" class="custom-file-input" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04">
               <label class="custom-file-label" for="inputGroupFile04">Seleccionar foto</label>
             </div>
             <div class="input-group-append">
-              <button (click)="subirFoto()" class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Aceptar</button>
+              <button class="btn btn-outline-secondary" (click)="subirFoto()" [disabled]="!fotoSeleccionada" type="button" id="inputGroupFileAddon04">Aceptar</button>
             </div>
           </div>
+
+          <div class="progress" *ngIf="progreso > 0" style="height: 10%;">
+            <div class="progress-bar progress-bar-striped" role="progressbar" [ngStyle]="{width: progreso+'%'}" attr.aria-valuenow="{{progreso}}" aria-valuemin="0" aria-valuemax="100">
+              {{progreso}}%
+            </div>
+          </div>
+
         </div>
         <div class="col-sm">
           <img class="img-thumbnail rounded" *ngIf="anuncio?.foto" src="http://localhost:8080/api/uploads/img/{{anuncio.foto}}" alt="{{anuncio.foto}}">
         </div>
       </div>
     </div>
-
-
 
   </div>
 
