--- a/angular/anuncios/src/app/anuncios/anuncios.component.html
+++ b/angular/anuncios/src/app/anuncios/anuncios.component.html
@@ -1,3 +1,5 @@
+<detalle-anuncio *ngIf="anuncioSeleccionado" [anuncio]="anuncioSeleccionado"></detalle-anuncio>
+
 <div class="card border-primary mb-3">
   <div class="card-header">Anuncios</div>
   <div class="card-body text-primary">
@@ -21,7 +23,8 @@
       </thead>
       <tbody class="">
         <tr *ngFor="let anuncio of anuncios">
-          <td><button type="button" name="button" class="btn btn-success" [routerLink]="['/anuncios/ver', anuncio.id]">{{ anuncio.id }}</button></td>
+          <!-- <td><button type="button" name="button" class="btn btn-success" [routerLink]="['/anuncios/ver', anuncio.id]">{{ anuncio.id }}</button></td> -->
+          <td><button type="button" class="btn btn-success" name="button" (click)="abrirModal(anuncio)">{{ anuncio.id }}</button></td>
           <td>{{ anuncio.titulo }}</td>
           <td>{{ anuncio.historia | uppercase}}</td>
           <td>{{ anuncio.createAt | date: "EEEE dd, MMMM yyyy" }}</td>
