--- a/angular/anuncios/src/app/anuncios/detalle/detalle.component.html
+++ b/angular/anuncios/src/app/anuncios/detalle/detalle.component.html
@@ -1,4 +1,56 @@
-<div class="card bg-dark text-white">
+<div class="modal" *ngIf="modalService.modal" tabindex="-1" role="dialog" style="display: block;">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">{{ tituloPagina }}</h5>
+        <button type="button" class="close" (click)="cerrarModal()" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm">
+
+              <ul *ngIf="anuncio" class="list-group text-dark mb-3">
+                <li class="list-group-item active">{{anuncio.titulo}}</li>
+                <li class="list-group-item">{{anuncio.historia}}</li>
+                <li class="list-group-item">{{anuncio.createAt | date:"fullDate"}}</li>
+              </ul>
+
+              <div class="input-group mb-3">
+                <div class="custom-file">
+                  <input (change)="seleccionarFoto($event)" type="file" class="custom-file-input" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04">
+                  <label class="custom-file-label" for="inputGroupFile04">Seleccionar foto</label>
+                </div>
+                <div class="input-group-append">
+                  <button class="btn btn-outline-secondary" (click)="subirFoto()" [disabled]="!fotoSeleccionada" type="button" id="inputGroupFileAddon04">Aceptar</button>
+                </div>
+              </div>
+
+              <div class="progress" *ngIf="progreso > 0" style="height: 10%;">
+                <div class="progress-bar progress-bar-striped" role="progressbar" [ngStyle]="{width: progreso+'%'}" attr.aria-valuenow="{{progreso}}" aria-valuemin="0" aria-valuemax="100">
+                  {{progreso}}%
+                </div>
+              </div>
+
+            </div>
+            <div class="col-sm">
+              <img class="img-thumbnail rounded" *ngIf="anuncio?.foto" src="http://localhost:8080/api/uploads/img/{{anuncio.foto}}" alt="{{anuncio.foto}}">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="cerrarModal()" data-dismiss="modal">Close</button>
+        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- <div class="card bg-dark text-white">
   <div class="card-header">{{ tituloPagina }}</div>
   <div class="card-body">
 
@@ -37,4 +89,4 @@
 
   </div>
 
-</div>
+</div> -->
