--- a/angular/anuncios/src/app/anuncios/detalle/detalle.component.html
+++ b/angular/anuncios/src/app/anuncios/detalle/detalle.component.html
@@ -17,6 +17,7 @@
                 <li class="list-group-item active">{{anuncio.titulo}}</li>
                 <li class="list-group-item">{{anuncio.historia}}</li>
                 <li class="list-group-item">{{anuncio.createAt | date:"fullDate"}}</li>
+                <li class="list-group-item">{{anuncio.region.nombre}}</li>
               </ul>
 
               <div class="input-group mb-3">
