Añadido campo select region.

--- a/angular/anuncios/src/app/anuncios/anuncios.component.html
+++ b/angular/anuncios/src/app/anuncios/anuncios.component.html
@@ -30,7 +30,7 @@
 
             <img class="img-thumbnail rounded" *ngIf="!anuncio?.foto" (click)="abrirModal(anuncio)"
             src="http://localhost:8080/images/no-usuario.png" alt="sin foto" style="width: 64px; cursor: pointer;">
-            <button type="button" class="btn btn-success" name="button" (click)="abrirModal(anuncio)">{{ anuncio.id }}</button>
+            <!-- <button type="button" class="btn btn-success" name="button" (click)="abrirModal(anuncio)">{{ anuncio.id }}</button> -->
           </td>
           <td>{{ anuncio.titulo }}</td>
           <td>{{ anuncio.historia | uppercase}}</td>
