--- a/angular/anuncios/src/app/anuncios/form.component.html
+++ b/angular/anuncios/src/app/anuncios/form.component.html
@@ -44,6 +44,15 @@
       </div>
 
       <div class="form-group row">
+        <label for="region" class="col-form-label col-sm-2">Región</label>
+        <div class="col-sm-6">
+          <select class="form-control" name="region" [(ngModel)]="anuncio.region" style="width:80%;">
+            <option *ngFor="let region of regiones" [ngValue]="region">{{region.nombre}}</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="form-group row">
         <div class="col-sm-6">
           <button class="btn btn-primary" role="button" (click)="create()" *ngIf="!anuncio.id else elseBlock" [disabled]="!anuncioForm.form.valid">Crear</button>
           <ng-template #elseBlock>
