--- a/angular/anuncios/src/app/anuncios/form.component.html
+++ b/angular/anuncios/src/app/anuncios/form.component.html
@@ -46,7 +46,7 @@
       <div class="form-group row">
         <label for="region" class="col-form-label col-sm-2">Región</label>
         <div class="col-sm-6">
-          <select class="form-control" name="region" [(ngModel)]="anuncio.region" style="width:80%;">
+          <select [compareWith]="compararRegion" class="form-control" name="region" [(ngModel)]="anuncio.region" style="width:80%;">
             <option *ngFor="let region of regiones" [ngValue]="region">{{region.nombre}}</option>
           </select>
         </div>
