Añadiendo opción por defecto con el texto seleccionar.

--- a/angular/anuncios/src/app/anuncios/form.component.html
+++ b/angular/anuncios/src/app/anuncios/form.component.html
@@ -47,6 +47,7 @@
         <label for="region" class="col-form-label col-sm-2">Región</label>
         <div class="col-sm-6">
           <select [compareWith]="compararRegion" class="form-control" name="region" [(ngModel)]="anuncio.region" style="width:80%;">
+            <option [ngValue]="undefined">--- Seleccionar región ---</option>
             <option *ngFor="let region of regiones" [ngValue]="region">{{region.nombre}}</option>
           </select>
         </div>
